--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:image" content="alexanderbyrne.com/images/social/social@2x.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:title" content="Alexander Byrne">
+    <meta property="og:description" content="Experience and Interaction designer based in Melbourne.">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="550">
     <title>Alexander Byrne</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css">
     
