--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Experience and Interaction designer based in Melbourne.">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="550">
-    <title>Alexander Byrne</title>
+    <title>Alexander Byrne - Experience and Interaction Designer</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css">
     
   </head>
